<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/soma"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/valor3"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:textSize="25dp"
        android:textColor="@android:color/background_light"
        android:background="@android:color/background_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor1"
        android:id="@+id/textView7"
        android:layout_above="@+id/textView3"
        android:layout_toLeftOf="@+id/valor1"
        android:layout_toStartOf="@+id/valor1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor2"
        android:id="@+id/textView3"
        android:layout_marginTop="58dp"
        android:layout_below="@+id/valor1"
        android:layout_alignRight="@+id/textView7"
        android:layout_alignEnd="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor3"
        android:id="@+id/textView4"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/valor3"
        android:layout_toStartOf="@+id/valor3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor2"
        android:layout_above="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/valor3"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/valor2"
        android:layout_alignStart="@+id/valor2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notafinal"
        android:id="@+id/MediaFinal"
        android:layout_alignBottom="@+id/soma"
        android:layout_alignRight="@+id/valor3"
        android:layout_alignEnd="@+id/valor3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media"
        android:id="@+id/textView2"
        android:layout_alignTop="@+id/soma"
        android:layout_alignLeft="@+id/MediaFinal"
        android:layout_alignStart="@+id/MediaFinal" />


</RelativeLayout>
